Revert "fix profile image horizontal allignment on small screens"
This reverts commit ea4c654241add04d20ca621183344ca4e629c92b.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,28 +6,6 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-img.profile-icon {
-    display: flex;
-    justify-content: center;
-    width: 550px;
-    align-content: center;
-    margin-right: auto;
-    margin-left: auto;
-}
-@media screen and (max-width: 565px) {
-	img.profile-icon {
-		display: flex;
-		justify-content: center;
-		width: 300px;
-		align-content: center;
-		margin-right: auto;
-		margin-left: auto;
-	}
-}
-#textContainer{
-	padding-left: 2em !important; 
-    padding-right: 2em !important;
-}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -278,7 +256,7 @@ input, select, textarea {
 	
 		/* scale: 0.5; */
 		scale: 0.6;
-		vertical-align: middle;
+		/* vertical-align: middle; */
   /* width: 180px; */
   /* height: 40px; */
   border-radius: 100%;
@@ -3334,8 +3312,8 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				/* padding-left: 2em;
-				padding-right: 2em; */
+				padding-left: 2em;
+				padding-right: 2em;
 			}
 
 				#header br {
